unpackaged/main/default/objects/litify_pm__COI_Search__c/litify_pm__COI_Search__c.object-meta.xml
<CustomObject>
    <description>Represents a single search that was performed in the conflict checker. Results from the search are noted as child objects to this object.</description>
    <label>COI Search</label>
    <nameField>
        <label>COI Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COI Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>