unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__COI_Search_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__COI_Search_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COI Search Status</label>
    <referenceTo>litify_pm__COI_Search_Status__c</referenceTo>
    <relationshipLabel>COI Searches</relationshipLabel>
    <relationshipName>COI_Searches</relationshipName>
    <type>Lookup</type>
</CustomField>