unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Ignored_Limit__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Ignored_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the user has ignored the default limit of 500 records when creating their search.</description>
    <label>Ignored Limit</label>
    <type>Checkbox</type>
</CustomField>