unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Is_Narrow__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Narrow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the user decided to narrow their search criteria, false otherwise.</description>
    <label>Is Narrow</label>
    <type>Checkbox</type>
</CustomField>