unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Number_Of_Results_Found__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Number_Of_Results_Found__c</fullName>
    <label>Number of Results Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>