unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Number_Of_Results_Saved__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Number_Of_Results_Saved__c</fullName>
    <description>The number of results currently saved to this search.</description>
    <label>Number of Results Saved</label>
    <summaryForeignKey>litify_pm__COI_Search_Result__c.litify_pm__COI_Search__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>