unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Objects_Searched__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Objects_Searched__c</fullName>
    <label>Objects Searched</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>