unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Search_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Search_Date__c</fullName>
    <description>The date this search was performed</description>
    <label>Search Date</label>
    <type>DateTime</type>
</CustomField>