unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Search_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Search_Description__c</fullName>
    <label>Search Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>