unpackaged/main/default/objects/litify_pm__COI_Search__c/fields/litify_pm__Source_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Source_Object_Id__c</fullName>
    <description>The Id of the source object for which this search was performed.</description>
    <externalId>true</externalId>
    <label>Source Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>